--- a/inst/doc/mvGauss.Rmd
+++ b/inst/doc/mvGauss.Rmd
@@ -42,22 +42,23 @@ logLik = function( params, data ) {
     # Declare Sigma as a Tensorflow object
     Sigma = tf$constant( diag(2), dtype = tf$float32 )
     # Declare distribution of each observation
-    baseDist = tf$contrib$distributions$MultivariateNormalFull( params$theta, Sigma )
+    baseDist = MultivariateNormalFull( params$theta, Sigma )
     # Declare log likelihood function and return
     logLik = tf$reduce_sum( baseDist$log_pdf( data$X ) )
     return( logLik )
 }
 ```
-So this function basically states that our likelihood is $\sum_{i=1}^N \log \mathcal N( x_i | \theta, I_2 )$, where $\mathcal N( x | \mu, \Sigma )$ is a Gaussian density at $x$ with mean $\mu$ and variance $\Sigma$.
+So this function basically states that our likelihood is $\sum_{i=1}^N \log \mathcal N( x_i | \theta, I_2 )$, where $\mathcal N( x | \mu, \Sigma )$ is a Gaussian density at $x$ with mean $\mu$ and variance $\Sigma$. `R` does not play nicely with the tensorflow type system, so make sure you set all your constants in the `logLik` and `logPrior` functions to `tf$float32`, as we have done. Otherwise you will encounter an error. Notice that we simply used `MultivariateNormalFull` rather than the less wieldy `tf$contrib$distributions$MultivariateNormalFull`. This is because we have built aliases for all the distributions in `tf$contrib$distributions`. For a full list, see the package documentation.
 
 Next we want to define our log prior, which we assume is $\log p( \theta_j ) = \mathcal N(\theta_j | 0,10)$, for each dimension $j$ of $\theta$. As for the log likelihood definition, the log prior is defined as a function with input `params` and `data`. In our case the definition is
 ```{r}
 logPrior = function( params, data ) {
-    baseDist = tf$contrib$distributions$Normal( 0, 10 )
+    baseDist = Normal( 0, 10 )
     logPrior = tf$reduce_sum( baseDist$log_pdf( params$theta ) )
     return( logPrior )
 }
 ```
+Again make sure you set all your constants inside the function to `tf$float32`, as we have done. Similarly we can just use `Normal` rather than `tf$contrib$distributions$Normal`.
 
 Before we begin running our SGLD algorithm, we need to specify the stepsize and minibatch size. A stepsize is required for each parameter, so this must be a list of numbers with names that are exactly the same as each of the parameters. The minibatch size is simply a number that is less than $N$. It specifies how long the SGLD algorithm takes to run, at the cost of accuracy.
 ```{r}
@@ -80,4 +81,4 @@ ggplot( thetaOut, aes( x = V1, y = V2 ) ) +
     stat_density2d( size = 1.5 )
 ```
 
-There are lots of other sgmcmc algorithms implemented that can be used by simply changing the tuning parameters slightly including `sgldcv`, `sghmc`, `sgnht`, etc.
+There are lots of other sgmcmc algorithms implemented that can be used by simply changing the tuning parameters slightly including `sghmc` and `sgnht`; as well as their [control variate counterparts](https://arxiv.org/pdf/1706.05439.pdf) for improved efficiency.
